fix: make scrollbar invisible
Fixes the bug where Timemarker does not align with clips due to the decreased inner width in cliplines caused by scrollbar.
But it does make it unclear to the user that it is possible to scroll vertically in player-mode, to see all clips.

--- a/frontend/src/components/timeline/timeline.module.css
+++ b/frontend/src/components/timeline/timeline.module.css
@@ -162,6 +162,12 @@
   overflow-x: hidden;
   /*background-color: rgba(0, 107, 194, 0.57);*/
   pointer-events: auto;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.cliplineContainer::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .cliplines {
